tests/err_qty/exp_paren_zero.stderr
error: unit with exponent of zero is scalar
 --> tests/err_qty/exp_paren_zero.rs:5:28
  |
5 |     let _err = qty![1.0 m^(0)];
  |                            ^
